--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-*.gem
-.bundle
-.sass-cache
-.jekyll-cache
 _site
+.sass-cache
+.jekyll-metadata
+*.DS_Store
 Gemfile.lock
-unused
-bootstrap-reference.html
