--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # General Site Settings
 title: zhaoqidahaoren
-logo: images/logo.svg # You can add own logo.
+logo: /images/logo.svg # You can add own logo.
 description: Zolan is modern minimal theme for Jekyll
 
 
