--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: Edition Template
 url: "https://long-pig.cloudvent.net"
-baseurl: "https://zhaoqidahaoren.github.io/"
+baseurl: "https://zhaoqidahaoren.github.io"
 google_analytics_key:
 show_full_navigation: true
 
