--- a/_config.yml
+++ b/_config.yml
@@ -44,17 +44,9 @@ exclude:
   - LICENCE
 
 collections:
-  en_docs:
-    title: Documentation
-    output: true
-    permalink: /en/docs/:path/
-  zh_docs:
-    title: 文档
-    output: true
-    permalink: /zh/docs/:path/
   docs:
     title: Documentation
-    permalink: /:path/
+    permalink: /:lang/docs/:path/
     output: true
 
 defaults:
