--- a/_config.yml
+++ b/_config.yml
@@ -44,9 +44,17 @@ exclude:
   - LICENCE
 
 collections:
+  en_docs:
+    title: Documentation
+    output: true
+    permalink: /en/docs/:path/
+  zh_docs:
+    title: 文档
+    output: true
+    permalink: /zh/docs/:path/
   docs:
     title: Documentation
-    permalink: /:lang/docs/:path/
+    permalink: /:path/
     output: true
 
 defaults:
