--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,10 @@ collections:
     title: 文档
     output: true
     permalink: /zh/docs/:path/
+  docs:
+    title: Documentation
+    permalink: /:path/
+    output: true
 
 defaults:
   -
