--- a/_config.yml
+++ b/_config.yml
@@ -47,11 +47,11 @@ collections:
   en_docs:
     title: Documentation
     output: true
-    permalink: /en/docs/:path/
+    permalink: /en/:path/
   zh_docs:
     title: 文档
     output: true
-    permalink: /zh/docs/:path/
+    permalink: /zh/:path/
   docs:
     title: Documentation
     permalink: /:path/
