--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----
 # Site
 
-title: Edition Template
+title: Developers
 url: "https://long-pig.cloudvent.net"
 baseurl:
 google_analytics_key:
@@ -15,7 +15,7 @@ author:
   email:
   twitter: # twitter username without the @ symbol
 social:
-  name: Edition Template
+  name: Developers
   links:
     - https://github.com/CloudCannon/edition-jekyll-template
 
